// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Primary Bold displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-primary-lighter text-primary-dark text-no-wrap text-bold"
    >
      Primary Test
    </span>
  </div>
</body>
`;

exports[`Tag Primary textWrap displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-primary-lighter text-primary-dark text-wrap display-block"
    >
      Primary Test with a really really really really long child
    </span>
  </div>
</body>
`;

exports[`Tag Variants Primary displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-primary-lighter text-primary-dark text-no-wrap"
    >
      Primary Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants accent displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-accent-warm-lighter text-accent-warm-darker text-no-wrap"
    >
      Accent Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants base displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-base-lighter text-base-dark text-no-wrap"
    >
      Base Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants baseDark displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-white text-base-dark border usa-tag-padding-override text-no-wrap"
    >
      BaseDark Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants error displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-error-extra-light text-error-dark text-no-wrap"
    >
      Error Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants info displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-info-extra-light text-info-darker text-no-wrap"
    >
      Info Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants info with hover displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-info-extra-light text-info-darker accent-cool-hover-override text-no-wrap"
    >
      Info with hover Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants noBg displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-white text-base text-no-wrap"
    >
      NoBg Test
    </span>
  </div>
</body>
`;
